# tiny-jail

./: .gitignore  Cargo.toml  PROJECT.md  README.md  build.rs  flake.nix
.github/workflows/: rust.yml
audisp-plugin/: Cargo.toml
data/: abstract_rules.json  abstract_syscalls.json  gcc_stats.json  seccomp_rules.json
docs/: data.md  data_and_oci.md
macros/: Cargo.toml
macros/src/: lib.rs
notes/: fuzzing.md  goals.md  resources.md  rules_conf.md
profiles/: extended_ls_l.json  extended_oci_1.json  oci_ls_l.json  oci_ls_l_minimized.toml  oci_profile.json  oci_profile_ex1.json  oci_profile_ls_l.json
src/: actions.rs  audisp.rs  audisp_plugin.rs  commands.rs  filters.rs  lib.rs  main.rs  monitor.rs  monitor_log.rs  profile.rs  tui.rs
tests/: cli_integration.rs  fuzz_integration.rs  regression.rs
tiny-jail/: Cargo.toml  build.rs  detailed_stats.json
tiny-jail/data/: README.md  abstract_rules.json  abstract_rules.min.json  coreutils_stats.json  oci_1-1.md  syscalls.json
tiny-jail/docs/: architecture.mermaid  data_and_oci.md
tiny-jail/fuzz/: Cargo.toml
tiny-jail/fuzz/fuzz_targets/: fuzz_apply.rs  fuzz_structured.rs
tiny-jail/notes/: TODO.md  goals.md
tiny-jail/profiles/: extended_ls_l.toml  oci_ls_l.toml
tiny-jail/src/: actions.rs  audisp.rs  commands.rs  error.rs  exec.rs  filters.rs  fuzz.rs  io.rs  lib.rs  monitor.rs  options.rs  reduce.rs
tiny-jail/tests/: cli_integration.rs  fuzz_integration.rs  regression.rs
tiny-jail/tools/: extract_abstract_sc.py  merge_syscalls.py
tools/: batch_stats.sh  extract_sc_md.py
tools/src/: syscall_64.md
