[package]
name = "tiny-jail"
version = "0.0.1"
edition = "2021"
authors = ["Côme VINCENT <come.vincent@polytechnique.edu>"]
license = "GPL-3.0"
description = "Seccomp filter generation using functional syscall groups and fuzzing"
repository = "https://github.com/comejv/tiny-jail"
keywords = ["seccomp", "security", "syscall", "sandbox", "fuzzing"]
categories = ["os::linux-apis"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log2 = "0.2"
nix = { version = "0.30", features = ["process"] }
seccompiler = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysnames = "0.1"
thiserror = "1.0"

[dev-dependencies]

