[package]
name = "tiny-jail-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
toml = "0.9.8"

[dependencies.tiny-jail]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "fuzz_structured"
path = "fuzz_targets/fuzz_structured.rs"
test = false
doc = false

[[bin]]
name = "fuzz_apply"
path = "fuzz_targets/fuzz_apply.rs"
test = false
doc = false
